--- a/index.html
+++ b/index.html
@@ -12,5 +12,11 @@
         <div class="overlay"></div>
     </div>
     <script src="script.js"></script>
+    <svg xmlns="http://www.w3.org/2000/svg" version="1.1">
+        <filter id="water-effect">
+          <feTurbulence type="fractalNoise" baseFrequency="0.01 0.02" numOctaves="2" result="warp" />
+          <feDisplacementMap in="SourceGraphic" in2="warp" scale="30" xChannelSelector="R" yChannelSelector="G" />
+        </filter>
+      </svg>
 </body>
 </html>
