--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
 </head>
 <body>
     <div class="mirror">
+        <video id="video" autoplay playsinline></video>
         <canvas id="canvas"></canvas>
         <div class="overlay"></div>
     </div>
